--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -16,7 +16,7 @@
 
 
 .category
-  %h2 人気カテゴリー
+  %h1 人気のカテゴリー
   .category_btn
     %button.btn{type: "button"}>レディース
     %button.btn{type: "button"}>メンズ
