--- a/app/assets/stylesheets/users/new.scss
+++ b/app/assets/stylesheets/users/new.scss
@@ -217,6 +217,7 @@
       text-align: center;
       &__form {
         padding:40px 40px 64px;
+        border-top: 1px solid rgb(245, 245, 245);
         .l-registration-content{
           max-width: 343px;
           margin: 0 auto;
