--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,35 +1,72 @@
-.signup__container
-  .signup__header
-    .signup__header__logo
-      = link_to "#" do
-        = image_tag "fmarket_logo_red.svg"
-    .signup-main
-      .signup-main__head 
-        新規会員登録
-      %ul.signup-submit-button-form
-        .signup-index-mail-box
-          = link_to "#"do
-            メールアドレスで登録する
-            = icon('far', 'envelope')
-        .signup-index-facebook-form
-          = link_to "#" do
-            Facebookで登録する
-            = icon('fab', 'facebook-square')
-            
-        .signup-index-google-form
-          = link_to "#" do
-            .main__conect__lists__google__btn
-              Googleで登録する
-            .main__conect__lists__google__icon
-    .signup__footer
-      .signup__footer__box
-        = link_to "#"do
-          プライバシーポリシー
-        = link_to "#"do
-          メルカリ利用規約
-        = link_to "#"do
-          特定商取引に関するにかんする表記
-      .signup__footer__logo
-        = link_to "#" do
-          = image_tag "logo_gray.svg", width: "80px"
-      %p © Mercari, Inc.  
+.signup-wrapper
+  .simple-header
+    = render partial: "header"
+  %main.registration-main
+    %section.l-registration-container
+      %h2.l-registration-head__registration 会員情報入力
+      .l-registration-head__registration__form
+        .l-registration-content
+          = form_with(url: "#", local: true, class: "l-registration-content") do |form|
+            .l-registration-content__nickname
+              .l-registration-content__nickname__input
+              = form.label :description, 'ニックネーム'
+              %span.l-registration-content__require 必須
+              %br/
+              = form.text_field :nickname,  autofocus: true, autocomplete: "nickname", placeholder: "例)メルカリマン"
+            .l-registration-content__email
+              = form.label :email, 'メールアドレス'
+              %span.l-registration-content__require 必須
+              %br/
+              = form.email_field :email, autocomplete: "email",placeholder: "PC・携帯どちらでも可"
+            .l-registration-content__password
+              = form.label :password, 'パスワード'
+              %span.l-registration-content__require 必須
+              %br/
+              = form.password_field :password, autocomplete: "new-password", placeholder: "7文字以上"
+              %p.l-registration-content__information
+                ※ 英字と数字の両方を含めて設定してください
+            .l-registration-content__password
+              .l-registration-content__password__checkbox  
+                =check_box_tag :check1
+                =label_tag :check1, "パスワードを表示する"  
+            .l-registration-sub-head
+              %h3.l-registration-sub-head__left-text 本人確認
+              %p.l-registration-sub-head__text 
+                安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。            
+            .signup-main__form__name 
+              %p 
+                お名前(全角) 
+              %span.l-registration-content__require 必須 
+            .signup-main__form__name__inputbox
+              = form.text_field :l_name_kanji, autocomplete: "l_name_kanji", placeholder: '例）佐藤'
+              = form.text_field :f_name_kanji, autocomplete: "f_name_kanji", placeholder: '例) 笑'
+            .signup-main__form__name-kana 
+              %p
+                お名前カナ(全角)
+              %span.l-registration-content__require 必須 
+            .signup-main__form__name-kana__inputbox 
+              = form.text_field :l_name_kana, autocomplete: "l_name_kana", placeholder: "例)サトウ"
+              = form.text_field :f_name_kana, autocomplete: "f_name_kana", placeholder: "例)ワラ"
+            .l-registration-content__user__birthday
+              = form.label :birthdate, "生年月日"
+              %span.l-registration-content__require 必須
+              %br/  
+              .birthday-select-wrap
+                != sprintf(form.date_select(:birthday, prefix:'birthday',with_css_classes:'.birthday-select-wrap', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日'
+              %p.form-into-text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。 
+            .form-text-center-on
+              %p.form-text-conter「次へ進む」のボタンを押すことにより、利用規約に同意したものとみなします 
+              %br/
+              = form.submit "「次へ進む」",  class: "next-btn" 
+
+        .l-registration-content-text__right
+          = link_to("本人情報の登録について", "＃")
+          = icon('fas', 'chevron-right')
+        .l-registration-content-recaptcha__term
+          This site is protected by reCAPTCHA and the Google 
+          = link_to("Privacy Policy", "#")
+          and
+          = link_to("Terms of Service", "#")
+          apply.
+  .signup__footer
+    = render partial: "footer"
