--- a/app/assets/stylesheets/users/new.scss
+++ b/app/assets/stylesheets/users/new.scss
@@ -1,13 +1,8 @@
-*{
-  margin: 0;
-}
+
 .signup__header{
   height: 128px;
   text-align: center;
-  background-color: whitesmoke;
-  margin: 0;
-  padding: 0;
-  border-width: 0;
+  background-color: #f5f5f5;
   &__logo{
     a{
     width: 185px;
@@ -23,15 +18,12 @@
     }
   }
 }
-
+    
 .signup-main {
   position: relative;
-  min-height: 100%;
-  background: #f5f5f5;
+  background-color: #f5f5f5;
   height: 350px;
   margin: 0;
-  padding: 0;
-
   &__head {
     background-color: #FFFFFF;
     border-bottom:#eee solid 1px;
@@ -41,14 +33,14 @@
     padding: 32px;
     text-align: center;
     margin: 0 auto 0;
-    width: 600px;
+    width: 700px;
   }
   .signup-submit-button-form {
     background-color: #FFFFFF;
-    height: 196px;
+    height: 280px;
     margin: 0 auto;
     padding: 40px 40px 64px 40px;
-    width: 582px;
+    width: 700px;
     .signup-index-mail-box {
       height: 50px;
       margin: 0 auto 16px;
@@ -67,14 +59,13 @@
         margin: 0 auto;
         display:block;
         padding-right: 16px;
-        text-decoration: none;
         i {
           float: left;
           padding-left: 11px;
           bottom: 25px;
           font-size: 20px;
           color: #ffffff;
-          padding-top: 15px;
+          padding-top: 7px;
         }
       }    
     }
@@ -96,14 +87,13 @@
         margin: 0 auto;
         display:block;
         padding-right: 16px;
-        text-decoration: none;
         i {
           float: left;
           padding-left: 11px;
           bottom: 25px;
           font-size: 33px;
           color: #ffffff;
-          padding-top: 10px;
+          padding-top: 4px;
         }
       }     
     } 
@@ -126,7 +116,6 @@
         margin: 0 auto;
         display:block;
         padding-right: 16px;
-        text-decoration: none;
         .main__conect__lists__google__btn {
         color: #333;
         }
@@ -144,14 +133,10 @@
   }
 }
 .signup__footer {
-  background: whitesmoke;
+  background: #f5f5f5;
   height: 360px;
   text-align: center;
   position: relative;
-  min-height: 100%;
-  background: #f5f5f5;
-  padding: 40px;
-  margin: 0;
   &__box {
     display: flex;
     justify-content: space-around;
