--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,7 +1,7 @@
 .exhibition_wrapper
   .exhibition_header
     = link_to "#" do
-      = image_tag "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2091621301", size: "185x49", alt: "logo", class: "image_top"
+      = image_tag "fmarket_logo_red.svg", size: "185x49", alt: "logo", class: "image_top"
   .exhibition_main
     %form
       .exhibition_main__container
@@ -205,6 +205,6 @@
             特定商取引に関する表記
       .exhibition_footer__inner__image
         = link_to "#" do
-          = image_tag "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2091621301", size: "80x65", alt: "logo", class: "image_under"
+          = image_tag "logo_gray.svg", size: "80x65", alt: "logo", class: "image_under"
       .exhibition_footer__inner__inc
         © Mercari, Inc.
