--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import 'font-awesome';
 @import 'users/registrations/new';
 @import 'users/show';
-
+@import 'products/new';
 @import 'products/index';
 
 
