--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -31,8 +31,8 @@
       margin-left: 200px;
       display: flex;
       &__left{
-        width: 50%;
-        height: 1252px;
+        width: 280px;
+        margin-right: 40px;
         &__top{
           height: 672px;
           &__list_topPage{
