--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,8 @@
 @import 'users/show';
 @import 'products/new';
 @import 'products/index';
-
+@import 'users/profile';
+@import 'users/def';
 
 @import 'users/new';
 
