--- a/app/assets/stylesheets/users/_def.scss
+++ b/app/assets/stylesheets/users/_def.scss
@@ -1,52 +1,45 @@
-*{
+.profile{
   box-sizing: border-box;
-}
-a{
-  text-decoration: none;
-}
-h2{
-  font-size: 24px;
-  padding: 8px 24px;
-  margin: 0;
-  text-align: center;
-  background-color: #ffffff;
-  font-weight: bold;
-}
-h3{
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 24px;
-}
-.red_button{
-  padding: 16px 0;
-  background-color: #ea352d;
-  text-align: center;
-  font-size: 14px;
-  color: #ffffff;
-  i{
-    margin-right: 16px;
+  a{
+    text-decoration: none;
   }
-}
-.explaination{
-  &__help{
-    border-top: 1px solid #eeeeee;
-    display: flex;
-    justify-content: flex-end;
-    .help{
-      margin-top: 40px;
-      color: #0099e8;
+  h2{
+    font-size: 24px;
+    padding: 8px 24px;
+    margin: 0;
+    text-align: center;
+    background-color: #ffffff;
+    font-weight: bold;
+  }
+  h3{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 24px;
+  }
+  .red_button{
+    padding: 16px 0;
+    background-color: #ea352d;
+    text-align: center;
+    font-size: 14px;
+    color: #ffffff;
+    i{
+      margin-right: 16px;
+    }
+  }
+  .explaination{
+    &__help{
+      border-top: 1px solid #eeeeee;
+      display: flex;
+      justify-content: flex-end;
+      .help{
+        margin-top: 40px;
+        color: #0099e8;
+      }
     }
   }
 }
 .background{
   background-color: #f5f5f5;
-}
-
-.nav_bar{
-  height: 49px;
-  width: 100vw;
-  border: 1px solid;
-  border-color: #505050;
 }
 .container{
   margin: 40px auto 0;
