nename class 'container' to 'profile_container'

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,7 +2,7 @@
 = render partial: '/products/header'
 .wrapper
   = render partial: 'bread'
-  .container
+  .profile_container
     = render partial: 'sidebar'
     = render partial: 'users_profile'
 .footer
