--- a/app/assets/stylesheets/users/_def.scss
+++ b/app/assets/stylesheets/users/_def.scss
@@ -41,7 +41,7 @@
 .background{
   background-color: #f5f5f5;
 }
-.container{
+.profile_container{
   margin: 40px auto 0;
   padding-bottom: 40px;
   width: 1020px;
