--- a/app/views/users/registrations/tel.html.haml
+++ b/app/views/users/registrations/tel.html.haml
@@ -1,8 +1,44 @@
-%h2 電話番番号を入力してください
-= form_with(model: @user, url: tel_path, local: true) do |form|
-  .admin-card__form__coupon
-    .admin-card__form__coupon__input
-      = form.label :tel, "TEL", class: "label"
-      = form.text_field :tel, required: true, class: "form-input description"
-  .admin-card__form__submit
-    = form.submit "次へ",  class: "form-submit btn btn-primary"
+.signup-wrapper
+  .simple-header
+    %h1.simple-header__logo
+      = link_to "/" do 
+        = image_tag "fmarket_logo_white.svg"
+    %nav.tel__progress-barfive
+      %ol.clearfix
+        %li.progress-barfive__active
+          会員情報
+          .progress-barfive__active__status
+        %li.progress-barfive__active__tel
+          電話番号認証
+          .progress-barfive__active__status__tel
+        %li.progress-barfive__active__address
+          お届け先住所入力
+          .progress-barfive__active__status__address
+        %li.progress-barfive__active__pay
+          支払い方法
+          .progress-barfive__active__status__pay
+        %li.progress-barfive__active__end
+          完了
+          .progress-barfive__active__status__end
+  %main.registration-main
+    %section.l-registration-container
+      %h2.l-registration-head__registration 電話番号の確認
+      .l-registration-head__registration__form
+        .l-registration-content__tel
+          = form_with(model: @user, url: tel_path, local: true) do |form|
+            .form__tel
+              = form.label :tel, "携帯電話の番号", class: "tel-label"
+              %br/
+              = form.text_field :tel, required: true, class: "form__tel--input", placeholder: "携帯電話の番号を入力"
+              %br/
+              %p.form__tel__description
+                本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
+              .form__tel__submit
+                = form.submit "SMSを送信する",  class: "form__tel--btn"
+            .form__tel__attention
+              %p ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
+            .l-registration-content-text__right
+              = link_to("電話番号の確認が必要な理由", "＃")
+              = icon('fas', 'chevron-right')
+  .signup__footer
+    = render partial: "footer"
