--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'users/registrations/new';
+@import 'users/registrations/address';
 @import 'users/show';
 @import 'users/new';
 
