styles for identification

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,8 +5,9 @@
 @import 'users/show';
 @import 'products/new';
 @import 'products/index';
-@import 'users/profile';
 @import 'users/def';
+@import 'users/profile';
+@import 'users/identification';
 
 @import 'users/new';
 
