--- a/app/assets/stylesheets/users/registrations/new.scss
+++ b/app/assets/stylesheets/users/registrations/new.scss
@@ -438,6 +438,15 @@
     }
   }
 } 
+.form-input__user {
+  height: 50px;
+  width: 100%;
+  border-radius: 4px;
+  border: solid 1px rgba(0, 0, 0, 0.2);
+}
+.last_name-input {
+  margin-right: 10px;
+}
 .l-registration-content__require {
   background: #ea352d;
   margin: 0 0 0 8px;
