%i to image_tag
_header.html.haml

--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -37,5 +37,5 @@
               やる事リスト
           %li#user.menu
             %a.my_account{href: "#",class: "color" } 
-              %img{alt: "#", src: "../inu.jpg",class: "my_user", style: "color:gray"}
+              = image_tag "inu.jpg",class: "my_user", style: "color:gray"
               マイページ
