change-registration-card-html

--- a/app/views/users/registrations/card.html.haml
+++ b/app/views/users/registrations/card.html.haml
@@ -1,7 +1,7 @@
 .card_registration_wrapper
   .card_registration_wrapper__simple_header
     %h1.card_registration_wrapper__simple_header__logo
-      = link_to "#" do 
+      = link_to "/" do 
         = image_tag "fmarket_logo_white.svg"
     %nav.card_registration_progress-barfive
       %ol.clearfix
@@ -64,14 +64,14 @@
               カード裏面の番号とは
           %input.card_registration_wrapper__main__container__middle__add{type: "text", placeholder: "追加する"}
       .card_registration_wrapper__main__container__signup__footer__box
-        = link_to "#"do
+        = link_to "/"do
           プライバシーポリシー
-        = link_to "#"do
+        = link_to "/"do
           メルカリ利用規約
-        = link_to "#"do
+        = link_to "/"do
           特定商取引に関するにかんする表記
       .card_registration_wrapper__main__container__signup__footer__logo
-        = link_to "#" do
+        = link_to "/" do
           = image_tag "logo_gray.svg", width: "80px", class: "card_registration_footer_image"
         %p © Mercari, Inc.          
 
