--- a/app/assets/stylesheets/users/card.scss
+++ b/app/assets/stylesheets/users/card.scss
@@ -319,6 +319,7 @@
         margin-top: 15px;
         cursor: pointer;
         margin-bottom: 30px;
+        border: 1px solid red;
       }
     }
   }
