--- a/app/views/users/registrations/card.html.haml
+++ b/app/views/users/registrations/card.html.haml
@@ -1,4 +1,4 @@
-.card_registration_wrapper
+.signup-wrapper
   .card_registration_wrapper__simple_header
     %h1.card_registration_wrapper__simple_header__logo
       = link_to "/" do 
@@ -62,32 +62,7 @@
             %i.fa.fa-question-circle
             %span.card_registration_wrapper__main__container__middle__link
               カード裏面の番号とは
-          %input.card_registration_wrapper__main__container__middle__add{type: "text", placeholder: "追加する"}
-      .card_registration_wrapper__main__container__signup__footer__box
-        = link_to "/"do
-          プライバシーポリシー
-        = link_to "/"do
-          メルカリ利用規約
-        = link_to "/"do
-          特定商取引に関するにかんする表記
-      .card_registration_wrapper__main__container__signup__footer__logo
-        = link_to "/" do
-          = image_tag "logo_gray.svg", width: "80px", class: "card_registration_footer_image"
-        %p © Mercari, Inc.          
-
+          %input.card_registration_wrapper__main__container__middle__add{type: "text", placeholder: "追加する"}    
+  .signup__footer
+    = render partial: "footer"
           
--# 下記の記述はサーバーサイド実行時の為に残します。
--# = form_with(model: @card, url: card_path, local: true) do |form|
--#   .admin-card__form__coupon
--#     .admin-card__form__coupon__input
--#       = form.label :number, "カード番号", class: "label"
--#       = form.number_field :number, required: true, class: "form-input description"
--#     .admin-card__form__coupon__input
--#       = form.label :expiration, "有効期限", class: "label"
--#       = form.date_field :expiration, required: true, class: "form-input description"
--#     .admin-card__form__coupon__input
--#       = form.label :security_code, "セキュリティコード", class: "label"
--#       = form.number_field :security_code, required: true, class: "form-input description"
--#   .admin-card__form__submit
--#     = form.submit "次へ",  class: "form-submit btn btn-primary"
--# = render partial: 'footer'
