--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,15 +3,16 @@
 @import 'font-awesome';
 @import 'users/registrations/new';
 @import 'users/registrations/address';
+@import 'users/registrations/tel';
 @import 'users/show';
 @import 'products/new';
 @import 'products/index';
+@import 'products/show';
 @import 'users/profile';
 @import 'users/def';
-
 @import 'users/new';
+@import 'buyers/new';
 
-@import 'products/show';
-@import 'products/index';
 
-@import 'users/registrations/tel';
+
+
