--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -5,7 +5,7 @@
     border-top: 1px solid #eeeeee;
     background-color: #ffffff;
     &__top{
-      background: url('bubbles.jpg');
+      background: url('https://d1f5hsy4d47upe.cloudfront.net/1c/1c0a73e254f713c2a9f33f8f6b06fb5e_t.jpeg');
       padding: 72px 16px 24px;
       background-size: cover;
       text-align: center;
