--- a/app/assets/stylesheets/users/card.scss
+++ b/app/assets/stylesheets/users/card.scss
@@ -22,7 +22,7 @@
   vertical-align: top;
   font-size: 0;
   text-align: center;
-  .card_registration_progress-barfive__active {
+  &__active {
     margin: 0 40px 0 0;
     min-width: 60px;
     position: relative;
@@ -228,6 +228,9 @@
           height: 48px;
           display: block;
           margin-top: 5px;
+          &::placeholder{
+            margin-left: 30px;
+          }
         }
       }
       &__expiration_1{
@@ -310,6 +313,9 @@
           height: 48px;
           width: 100%;
           margin-top: 5px;
+          &::placeholder{
+            text-align: center;
+          }
         }
       }
       &__add{
@@ -320,50 +326,20 @@
         cursor: pointer;
         margin-bottom: 30px;
         border: 1px solid red;
+        &::placeholder{
+          text-align: center;
+          color: white;
+        }
       }
     }
   }
-  .card_registration_wrapper__main__container__middle__number__under::placeholder{
-    margin-left: 30px;
-  }
   .card_registration_img{
     margin-top: 30px;
-  }
-  .card_registration_wrapper__main__container__middle__safty__number::placeholder{
-    text-align: center;
   }
   .card_awesome{
     font-size: 12px;
     float: right;
     color: #4689FF;
   }
-  .card_registration_wrapper__main__container__middle__add::placeholder{
-    text-align: center;
-    color: white;
-  }
 }
-.card_registration_wrapper__main__container__signup__footer__box{
-  background-color: #f5f5f5;
-  text-align: center;
-  position: relative;
-  min-height: 100%;
-  padding: 41px;
-  margin: 0;
-  font-size: 11px;
-  display: flex;
-  justify-content: space-between;
-  a{
-    color: black;
-    text-decoration: none;
-    &:hover{
-    opacity: 0.6;
-    }
-  }
-}
-.card_registration_wrapper__main__container__signup__footer__logo{
-  background-color: #f5f5f5;
-  text-align: center;
-  width: 100%;
-  height: 240px;
-  font-size: 11px;
-}
+
