--- a/app/views/buyers/new.html.haml
+++ b/app/views/buyers/new.html.haml
@@ -41,7 +41,7 @@
               %br
               有効期限 01 / 21
               %br 
-              = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2091621301', height: '20px', width: '50px', class: 'visa'
+              = image_tag 'visa.png', height: '20px', width: '50px', class: 'visa'
 
 
         .buyers__card__Method
