--- a/app/assets/stylesheets/buyers/new.scss
+++ b/app/assets/stylesheets/buyers/new.scss
@@ -113,7 +113,7 @@
       &__text{
         width: 100%;
         border-top: 1px solid #f5f5f5;
-        padding-top: 30px;
+        padding: 30px 0px 30px 0px;
         &__top{
           display: flex;
           justify-content: space-between;
