Update scss files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import 'users/registrations/new';
 @import 'users/registrations/tel';
 @import 'users/registrations/address';
+@import 'users/registrations/card';
 @import 'users/registrations/complete';
 @import 'users/show';
 @import 'products/new';
@@ -14,7 +15,6 @@
 @import 'users/log_out';
 
 @import 'users/new';
-@import 'users/card';
 @import 'products/show';
 @import 'products/index';
 
