--- a/app/assets/stylesheets/products/new.scss
+++ b/app/assets/stylesheets/products/new.scss
@@ -68,6 +68,8 @@
           border-style: dashed;
           border-color: #BBBBBB;
           border-width: thin;
+          text-align: center;
+          padding-top: 50px;
         &__message{
           padding: 50px;
           cursor: pointer;
@@ -235,7 +237,7 @@
       }
       &__shipping_method{
         width: 100%;
-        height: 300px;
+        height: 350px;
         padding: 0 40px;
         border-bottom: 1px solid #EEEEEE;
         &__inner{
@@ -248,6 +250,7 @@
             height: 100%;
             &__burden{
               width: 100%;
+              margin-top: 10px;
               &__left{
                 font-weight: bold;
                 font-size: 14px;
@@ -381,7 +384,7 @@
       }
       &__money{
         width: 100%;
-        height: 300px;
+        height: 250px;
         padding: 0 40px;
         border-bottom: 1px solid #EEEEEE;
         &__inner{
