--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,6 +1,6 @@
 .exhibition_wrapper
   .exhibition_header
-    = link_to "#" do
+    = link_to "/" do
       = image_tag "fmarket_logo_red.svg", size: "185x49", alt: "logo", class: "image_top"
   .exhibition_main
     = form_with(model: @product, url: products_path, local: true) do |form|
@@ -36,7 +36,7 @@
                 商品の説明
                 %span.exhibition_main__container__product__send__top__right
                   必須
-            = form.text_area :discription, class: "exhibition_main__container__product__send__discription", placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
+            = form.text_area :description, class: "exhibition_main__container__product__send__discription", placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
 
 
 
@@ -73,7 +73,7 @@
           .exhibition_main__container__product__shipping_method
             .exhibition_main__container__product__shipping_method__inner
               配送について
-              = link_to "#" do
+              = link_to "/" do
                 %i.fa.fa-question-circle{class: "question"}
               .exhibition_main__container__product__shipping_method__inner__select
                 .exhibition_main__container__product__shipping_method__inner__select__burden
@@ -144,38 +144,38 @@
                   販売履歴
           .exhibition_main__container__product__discription
             %p.exhibition_main__container__product__discription__1
-              = link_to "#", class: "link" do
+              = link_to "/", class: "link" do
                 禁止されている出品、行為
               を必ずご確認ください。
             %p.exhibition_main__container__product__discription__2
               またブランド品でシリアルナンバー等がある場合はご記載ください。
-              = link_to "#", class: "link" do
+              = link_to "/", class: "link" do
                 偽ブランドの販売
               は犯罪であり処罰される可能性があります。
             %p.exhibition_main__container__product__discription__3
               また、出品をもちまして
-              = link_to "#", class: "link" do
+              = link_to "/", class: "link" do
                 加盟店規約
               に同意したことになります。
 
             = form.submit "出品する", class: "exhibition_main__container__product__discription__exhibition"
-            = link_to "#" do
+            = link_to "/" do
               .exhibition_main__container__product__discription__back
                 もどる
   .exhibition_footer  
     .exhibition_footer__inner
       .exhibition_footer__inner__text
-        = link_to "/" do
+        = link_to "#" do
           .exhibition_footer__inner__text__1{class: "hover"}
             プライバシーポリシー
-        = link_to "/" do
+        = link_to "#" do
           .exhibition_footer__inner__text__2{class: "hover"}
             メルカリ利用規約
-        = link_to "/" do
+        = link_to "#" do
           .exhibition_footer__inner__text__3{class: "hover"}
             特定商取引に関する表記
       .exhibition_footer__inner__image
-        = link_to users_path do
+        = link_to "/" do
           = image_tag "logo_gray.svg", size: "80x65", alt: "logo", class: "image_under"
       .exhibition_footer__inner__inc
         © Mercari, Inc.
