--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -73,7 +73,7 @@
           .exhibition_main__container__product__shipping_method
             .exhibition_main__container__product__shipping_method__inner
               配送について
-              = link_to "/" do
+              = link_to "#" do
                 %i.fa.fa-question-circle{class: "question"}
               .exhibition_main__container__product__shipping_method__inner__select
                 .exhibition_main__container__product__shipping_method__inner__select__burden
@@ -125,7 +125,7 @@
           .exhibition_main__container__product__money
             .exhibition_main__container__product__money__inner
               販売価格(300~9,999,999)
-              = link_to "/" do
+              = link_to "#" do
                 %i.fa.fa-question-circle{class: "question"}
               .exhibition_main__container__product__money__inner__select
                 .exhibition_main__container__product__money__inner__select__a
@@ -144,17 +144,17 @@
                   販売履歴
           .exhibition_main__container__product__discription
             %p.exhibition_main__container__product__discription__1
-              = link_to "/", class: "link" do
+              = link_to "#", class: "link" do
                 禁止されている出品、行為
               を必ずご確認ください。
             %p.exhibition_main__container__product__discription__2
               またブランド品でシリアルナンバー等がある場合はご記載ください。
-              = link_to "/", class: "link" do
+              = link_to "#", class: "link" do
                 偽ブランドの販売
               は犯罪であり処罰される可能性があります。
             %p.exhibition_main__container__product__discription__3
               また、出品をもちまして
-              = link_to "/", class: "link" do
+              = link_to "#", class: "link" do
                 加盟店規約
               に同意したことになります。
 
