--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,23 +1,22 @@
 .signup__container
   .signup__header
     .signup__header__logo
-      = link_to "#" do
+      = link_to "/" do
         = image_tag "fmarket_logo_red.svg"
     .signup-main
       .signup-main__head 
         新規会員登録
       %ul.signup-submit-button-form
         .signup-index-mail-box
-          = link_to "#"do
+          = link_to new_user_registration_path do
             メールアドレスで登録する
             = icon('far', 'envelope')
         .signup-index-facebook-form
-          = link_to "#" do
+          = link_to user_facebook_omniauth_authorize_path, method: :post do
             Facebookで登録する
             = icon('fab', 'facebook-square')
-
         .signup-index-google-form
-          = link_to "#" do
+          = link_to user_google_oauth2_omniauth_authorize_path, method: :post do
             .main__conect__lists__google__btn
               Googleで登録する
             .main__conect__lists__google__icon
