--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
+@import "colors";
 @import "./reset";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+@import "flash";
 @import 'users/registrations/new';
 @import 'users/registrations/tel';
 @import 'users/registrations/address';
