--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -56,20 +56,23 @@
       .form_submit{
         position: absolute;
         top: 28px;
-        left: 86%;
+        left: 85%;
         width: 42px;
         height: 40px;
         border-color: white;
+        
       }
       .fa-lg.fa-fw.fa-search{
         font-weight: 900; 
         font-family: "Font Awesome 5 Free"; 
-        
+        background-color: transparent;
+        cursor: pointer;
       }
     
       ::placeholder {
         color: rgb(128, 128, 128);
-        font-size: 1.5em;
+        font-size: 1em;
+        padding-left:1% ;
       }
 
 
@@ -141,15 +144,10 @@
   height: 400px;
   position: relative;
 
-  .pic_ad{
-
-  
-
     .pic{
       width: 100vw;
       height: 400px;
     }
-  }
   
   .mein_pic_title{
     width: 80vw;
@@ -288,6 +286,7 @@
         position: absolute;
         bottom: 0;
         z-index: 2;
+        overflow: hidden;
       }
       .item_pic{
         width: 100%;
@@ -302,6 +301,8 @@
         left: 0;
         top: 50%;
         z-index: 50;
+        line-height: 23px;
+        padding-left: 2%;
       }
       #text_price{
         color: #eeeeee;
@@ -462,7 +463,7 @@
 
 
 
-
+// 出品ボタン
 .producte{
   position: relative;
  
@@ -495,3 +496,21 @@
 a{
   text-decoration: none;
 }
+
+
+
+// ヘッター下のスライドcss
+.bx-wrapper {
+  margin: 0 !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: none !important;
+  background: none !important;
+}
+.bxslider img{
+  width: 100% !important;
+  height: auto !important;
+}
+
+
