--- a/app/views/layouts/_notifications.html.haml
+++ b/app/views/layouts/_notifications.html.haml
@@ -1,4 +1,3 @@
 .notification
-  - flash.each do |message_type, message|
-    %div{:class => "alert alert-#{message_type}"}
-      = message
+  - flash.each do |key, value|
+    = content_tag :div, value, class: key
