fixed height for other products title

--- a/app/assets/stylesheets/products/show.scss
+++ b/app/assets/stylesheets/products/show.scss
@@ -343,9 +343,9 @@
         .title{
           padding: 8%;
           vertical-align: middle;
-          overflow-wrap: break-word;
           word-wrap: break-word;
           font-size: 16px;
+          height: 58px;
         }
         .title_iteme{
           display: flex;
