Revert "Merge branch 'master' into products-detail-server"
This reverts commit 1be590c6a02e50bae2ce7f331afc9c13a5f78a8f, reversing
changes made to 4f90111a74c3adbc9d2fce30dbb471288a2ef48e.

--- a/app/views/users/log_out.html.haml
+++ b/app/views/users/log_out.html.haml
@@ -5,8 +5,8 @@
   .logout_container
     = render partial: 'sidebar'
     .logout
-      .logout__button
-        = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'red_button'
+      = form_with url: '#', class: 'logout__button' do |f|
+        = f.submit 'ログアウト', class: 'red_button'
 .footer
   = render partial: '/products/adbtm'
   = render partial: '/products/footer'
