--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,22 +1,26 @@
-@import "colors";
 @import "./reset";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
-@import "flash";
 @import 'users/registrations/new';
 @import 'users/registrations/tel';
 @import 'users/registrations/address';
-@import 'users/registrations/card';
 @import 'users/registrations/complete';
-@import 'users/sessions/new';
-@import 'users/identification';
 @import 'users/show';
-@import 'users/profile';
-@import 'users/def';
-@import 'users/log_out';
-@import 'users/new';
 @import 'products/new';
 @import 'products/index';
+@import 'users/def';
+@import 'users/profile';
+@import 'users/identification';
+@import 'users/log_out';
+
+@import 'users/new';
+@import 'users/card';
 @import 'products/show';
-@import 'buyers/new';
+@import 'products/index';
+
+
+@import 'users/sessions/new';
+
+
 @import 'cards/show_card';
+
