--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -56,23 +56,20 @@
       .form_submit{
         position: absolute;
         top: 28px;
-        left: 85%;
+        left: 86%;
         width: 42px;
         height: 40px;
         border-color: white;
-        
       }
       .fa-lg.fa-fw.fa-search{
         font-weight: 900; 
         font-family: "Font Awesome 5 Free"; 
-        background-color: transparent;
-        cursor: pointer;
+        
       }
     
       ::placeholder {
         color: rgb(128, 128, 128);
-        font-size: 1em;
-        padding-left:1% ;
+        font-size: 1.5em;
       }
 
 
@@ -144,10 +141,15 @@
   height: 400px;
   position: relative;
 
+  .pic_ad{
+
+  
+
     .pic{
       width: 100vw;
       height: 400px;
     }
+  }
   
   .mein_pic_title{
     width: 80vw;
@@ -286,7 +288,6 @@
         position: absolute;
         bottom: 0;
         z-index: 2;
-        overflow: hidden;
       }
       .item_pic{
         width: 100%;
@@ -301,8 +302,6 @@
         left: 0;
         top: 50%;
         z-index: 50;
-        line-height: 23px;
-        padding-left: 2%;
       }
       #text_price{
         color: #eeeeee;
@@ -463,7 +462,7 @@
 
 
 
-// 出品ボタン
+
 .producte{
   position: relative;
  
@@ -496,21 +495,3 @@
 a{
   text-decoration: none;
 }
-
-
-
-// ヘッター下のスライドcss
-.bx-wrapper {
-  margin: 0 !important;
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border: none !important;
-  background: none !important;
-}
-.bxslider img{
-  width: 100% !important;
-  height: auto !important;
-}
-
-
