--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,9 +1,9 @@
 .exhibition_wrapper
   .exhibition_header
-    = link_to "/" do
+    = link_to "#" do
       = image_tag "fmarket_logo_red.svg", size: "185x49", alt: "logo", class: "image_top"
   .exhibition_main
-    = form_with(model: @product, url: products_path, local: true) do |form|
+    %form
       .exhibition_main__container
         .exhibition_main__container__title
           商品情報を入力
@@ -15,12 +15,16 @@
                 必須
           %p.exhibition_main__container__image_send__message
             最大10枚までアップロードできます
-          = form.label :image, class: "exhibition_main__container__image_label" do
+          %label.exhibition_main__container__image_label
+            
             .exhibition_main__container__image_label__file
-              ドラッグアンドドロップ
-              %br またはクリックしてファイルをアップロード
-              = form.file_field :image, class: "file" 
-               
+              %input{type: "file", class: "file"}
+                .exhibition_main__container__image_label__file__message
+                  %h4.exhibition_main__container__image_label__file__message__1
+                    ドラッグアンドドロップ
+                  %h4.exhibition_main__container__image_label__file__message__2
+                    またはクリックしてファイルをアップロード
+            
 
 
         .exhibition_main__container__product
@@ -30,13 +34,13 @@
                 商品名
                 %span.exhibition_main__container__product__send__top__right
                   必須
-            = form.text_field :name, class: "exhibition_main__container__product__send__name", placeholder: "  商品名 (必須40文字まで)"
+            %input.exhibition_main__container__product__send__name{type: "text", placeholder: "  商品名 (必須40文字まで)"}
             .exhibition_main__container__product__send__top
               %h3.exhibition_main__container__product__send__top__left
                 商品の説明
                 %span.exhibition_main__container__product__send__top__right
                   必須
-            = form.text_area :description, class: "exhibition_main__container__product__send__discription", placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
+            %textarea.exhibition_main__container__product__send__discription{placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"}
 
 
 
@@ -52,8 +56,21 @@
                 .exhibition_main__container__product__detail__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :name, [["レディース", 1], ["メンズ", 2], ["ベビー・キッズ", 3], ["インテリア・住まい・小物", 4],["本・音楽・ゲーム", 5], ["おもちゃ・ホビー・グッズ", 6], ["コスメ・香水・美容", 7], ["家電・スマホ・カメラ", 8], ["スポーツ・レジャー", 9], ["ハンドメイド", 10], ["チケット", 11], ["自動車・オートバイ", 12], ["その他", 13]], {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"} 
-                    
+                  %select.exhibition_main__container__product__detail__inner__select__wrappe__button
+                    %option{value: ""} ---
+                    %option{value: "1"} レディース
+                    %option{value: "2"} メンズ
+                    %option{value: "3"} ベビー・キッズ
+                    %option{value: "4"} インテリア・住まい・小物
+                    %option{value: "5"} 本・音楽・ゲーム
+                    %option{value: "6"} おもちゃ・ホビー・グッズ
+                    %option{value: "7"} コスメ・香水・美容
+                    %option{value: "8"} 家電・スマホ・カメラ
+                    %option{value: "9"} スポーツ・レジャー
+                    %option{value: "10"} ハンドメイド
+                    %option{value: "11"} チケット
+                    %option{value: "12"} 自動車・オートバイ
+                    %option{value: "13"} その他
 
 
 
@@ -65,8 +82,16 @@
                 .exhibition_main__container__product__detail__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :name, [["---", 0], ["新品、未使用", 2], ["未使用に近い", 3], ["目立った傷や汚れなし", 4], ["やや傷や汚れあり", 5], ["傷や汚れあり", 6], ["全体的に状態が悪い", 7]], {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
-                    
+                  %select.exhibition_main__container__product__detail__inner__select__wrappe__button
+                    %option{value: ""} ---
+                    %option{value: "1"} 新品、未使用
+                    %option{value: "2"} 未使用に近い
+                    %option{value: "3"} 目立った傷や汚れなし
+                    %option{value: "4"} やや傷や汚れなし
+                    %option{value: "5"} やや傷や汚れあり
+                    %option{value: "6"} 傷や汚れあり
+                    %option{value: "7"} 傷や汚れあり
+                    %option{value: "8"} 全体的に状態が悪い
 
 
 
@@ -84,18 +109,10 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_charge, [["---", 0], ["送料込み(出品者負担)", 2], ["着払い(購入者負担)", 3]], {}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
-                
-
-                .exhibition_main__container__product__shipping_method__inner__select__burden
-                  %h3.exhibition_main__container__product__shipping_method__inner__select__burden__left
-                    配送の方法
-                    %span.exhibition_main__container__product__shipping_method__inner__select__burden__right
-                      必須
-                .exhibition_main__container__product__shipping_method__inner__select__wrappe
-                  %i.fa.fa-chevron-down
-                    
-                  = form.select :shipping_method, [["---", 0], ["未定", 1], ["らくらくメルカリ便", 2], ["ゆうメール", 3], ["レターパック", 4], ["普通郵便（定形, 定形外)", 5], ["クロネコヤマト", 6], ["ゆうパック", 7], ["クリックポスト", 8], ["ゆうパケット", 9]], {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
+                  %select.exhibition_main__container__product__shipping_method__inner__select__wrappe__button
+                    %option{value: ""} ---
+                    %option{value: "1"} 送料込み(出品者負担)
+                    %option{value: "2"} 着払い(購入者負担)
 
 
 
@@ -107,8 +124,17 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_prefecture, [["---", 0], ["北海道", 1], ["青森", 2]], {}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
-                    
+                  %select.exhibition_main__container__product__shipping_method__inner__select__wrappe__button
+                    %option{value: ""} ---
+                    %option{value: "1"} 新品、未使用
+                    %option{value: "2"} 未使用に近い
+                    %option{value: "3"} 目立った傷や汚れなし
+                    %option{value: "4"} やや傷や汚れなし
+                    %option{value: "5"} やや傷や汚れあり
+                    %option{value: "6"} 傷や汚れあり
+                    %option{value: "7"} 傷や汚れあり
+                    %option{value: "8"} 全体的に状態が悪い
+
 
 
                 .exhibition_main__container__product__shipping_method__inner__select__day
@@ -119,8 +145,11 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_days, [["---", 0], ["1~2日で発送", 2], ["2~3日で発送", 3], ["4~7日で発送"]], {}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
-                    
+                  %select.exhibition_main__container__product__shipping_method__inner__select__wrappe__button
+                    %option{value: ""} ---
+                    %option{value: "1"} 1~2日で発送
+                    %option{value: "2"} 2~3日で発送
+                    %option{value: "3"} 4~7日で発送
 
           .exhibition_main__container__product__money
             .exhibition_main__container__product__money__inner
@@ -136,7 +165,7 @@
                   .exhibition_main__container__product__money__inner__select__a__price
                     .exhibition_main__container__product__money__inner__select__a__price__yen
                       ¥
-                    = form.text_field :price, placeholder: "例） 300", class: "exhibition_main__container__product__money__inner__select__a__price__figure"
+                    %input.exhibition_main__container__product__money__inner__select__a__price__figure{type: "text", placeholder: "例） 300"}
               
                 .exhibition_main__container__product__money__inner__select__commission
                   販売手数料(10%)
@@ -158,8 +187,8 @@
                 加盟店規約
               に同意したことになります。
 
-            = form.submit "出品する", class: "exhibition_main__container__product__discription__exhibition"
-            = link_to "/" do
+            %input.exhibition_main__container__product__discription__exhibition{type: "submit", value: "出品する", }
+            = link_to "#" do
               .exhibition_main__container__product__discription__back
                 もどる
   .exhibition_footer  
@@ -175,7 +204,7 @@
           .exhibition_footer__inner__text__3{class: "hover"}
             特定商取引に関する表記
       .exhibition_footer__inner__image
-        = link_to "/" do
+        = link_to "#" do
           = image_tag "logo_gray.svg", size: "80x65", alt: "logo", class: "image_under"
       .exhibition_footer__inner__inc
         © Mercari, Inc.
